[gd_scene load_steps=4 format=3 uid="uid://cgekle46gxk7j"]

[ext_resource type="Script" uid="uid://tc8dxpyxrwu6" path="res://script/screen_tranfer_trigger_area.gd" id="1_e3fit"]
[ext_resource type="Texture2D" uid="uid://d2v3ecylver60" path="res://Asset/Tiles/black_background.png" id="2_cvlxe"]

[sub_resource type="LabelSettings" id="LabelSettings_cvlxe"]
font_size = 8

[node name="Screen_tranfer_Trigger_Area" type="Area2D"]
process_mode = 3
disable_mode = 2
script = ExtResource("1_e3fit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Press" type="Label" parent="CollisionShape2D"]
top_level = true
offset_right = 55.0
offset_bottom = 23.0
text = "press F"
label_settings = SubResource("LabelSettings_cvlxe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="wrap_scene" type="Sprite2D" parent="."]
visible = false
top_level = true
position = Vector2(964, 536)
scale = Vector2(1.0625, 1.12593)
texture = ExtResource("2_cvlxe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
